# CasperSwap

./: .gitignore  CASPER_TO_ETH_GUIDE.md  Cargo.toml  DEPLOYMENT.md  LIQUIDITY.md  Odra.toml  README.md  UPGRADE.md  architecture.md  improve.md  package-lock.json  package.json  payload.json  resources.md  rust-toolchain.toml
contracts/: Cargo.toml  rust-toolchain
contracts/src/: bridge_controller.rs  lib.rs  lock_vault.rs  relayer_registry.rs  swap_router.rs
ethereum/: hardhat.config.js  package-lock.json  package.json
ethereum/artifacts/contracts/EthLockVault.sol/: EthLockVault.dbg.json  EthLockVault.json
ethereum/artifacts/contracts/EthLockVaultSimple.sol/: EthLockVault.dbg.json  EthLockVault.json
ethereum/cache/: console-history.txt  solidity-files-cache.json
ethereum/contracts/: EthLockVault.sol  EthLockVaultSimple.sol
ethereum/scripts/: deploy.js  deploy_simple.js
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
frontend/api/casper-node/: [...path].ts
frontend/public/: wallet-test.html
frontend/src/: App.tsx  index.css  output.css
frontend/src/components/: SwapInterface.tsx
frontend/src/lib/: casperClient.ts  contracts.ts
frontend/src/providers/: WalletProvider.tsx
relayer/: init-db.js  init-db.sh  package-lock.json  package.json
relayer/src/: backfill.ts  index.ts
relayer/src/config/: index.ts
relayer/src/core/: Executor.ts  PriceOracle.ts  SwapProcessor.ts  Verifier.ts
relayer/src/watchers/: CasperContractWatcher.ts  EventWatcher.ts
scripts/: deploy.sh
(+4 files in other folders)
