[package]
name = "casper_swap"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = { version = "2.4.0", default-features = false }
odra-modules = { version = "2.4.0", default-features = false }
base64ct = "=1.6.0"
casper-contract = { version = "5.1.1", default-features = false }

[build-dependencies]
odra-build = { version = "2.4.0", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { version = "2.4.0", default-features = false }
odra-cli = { version = "2.4.0", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
 

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "contracts_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "CasperSwap_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "CasperSwap_build_schema"
path = "bin/build_schema.rs"
test = false

[[bin]]
name = "CasperSwap_cli"
path = "bin/cli.rs"
test = false

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"






